# Data-Intelligence-Platform-multiagent

./: .gitattributes  .gitignore  CLAUDE.md  README.md  app.py  demo.py  pyproject.toml  requirements.txt  run_agent.py  watcher.py
.streamlit/: config.toml
agents/: lineage_agent.md  metadata_agent.md  quality_agent.md
samples/: collateral_register.csv  customer_accounts.csv  interest_rate_curves.json  kyc_screening_results.csv  risk_positions.sql  system_access_log.sql  trade_confirmations.csv  transaction_schema.json
src/: __init__.py  agent.py  config.py  schema.py
src/agents/: __init__.py  base.py  lineage_agent.py  loader.py  metadata_agent.py  quality_agent.py
src/agents/tools/: __init__.py  lineage_tools.py  quality_tools.py
src/connectors/: __init__.py  drive_connector.py  gmail_connector.py  google_auth.py
src/evals/: __init__.py  banking_standards.py  completeness.py  eval_runner.py  pii_consistency.py  sensitivity_consistency.py  type_validator.py
src/exporters/: __init__.py  csv_exporter.py  pdf_exporter.py  word_exporter.py
src/extractors/: __init__.py  base.py  csv_extractor.py  json_extractor.py  sql_extractor.py
src/guardrails/: __init__.py  pii_guardrail.py  sensitivity_guardrail.py
src/memory/: __init__.py  memory_store.py
src/regulations/: __init__.py  fetcher.py
